<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id = "@+id/ll_lock_item"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:layout_marginTop = "10dp"
        >
        <TextView
            android:id = "@+id/tv_lock_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/time_expression1"
            android:textSize = "20dp"
            />
        <TextView
            android:id = "@+id/tv_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text = "@string/time_init4"
            android:textSize = "15dp"

            />

        <TextView
            android:id = "@+id/tv_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text = "@string/select_day"
            android:textSize = "15dp"
            />

        <TextView
            android:id = "@+id/tv_reuse_lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text = "@string/lock_interval"
            android:textSize = "15dp"
            android:textColor = "@color/light_gray"
            />
        <TextView
            android:id = "@+id/tv_lock_remain_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/lock_limit_time"
            android:textSize = "15dp"
            android:textColor = "@color/light_gray"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop = "5dp"
        android:background = "@color/background"
        />

</LinearLayout>