<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginHorizontal="20dp"
    android:id = "@+id/cl_alarm_item"
    >

    <TextView
        android:id = "@+id/alarm_name"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toTopOf = "parent"
        android:textSize = "20dp"
        android:text= "@string/alarm_title"

        />


    <TextView
        android:id = "@+id/alarm_time"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toBottomOf = "@id/alarm_name"
        android:textSize = "18dp"
        android:text= "@string/time_init3"

        />

    <TextView
        android:id = "@+id/alarm_day"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toBottomOf = "@id/alarm_time"
        android:textSize= "15dp"
        android:textColor = "@color/light_gray"
        android:text= "@string/date_init"

        />

    <TextView
        android:id = "@+id/alarm_compare"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        app:layout_constraintTop_toBottomOf = "@id/alarm_day"
        android:textSize ="15dp"
        android:textColor = "@color/light_gray"
        android:text= "@string/alarm_remain_time"

        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/alarm_compare"
        />
</androidx.constraintlayout.widget.ConstraintLayout>