<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.main.MainFragment"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <!-- Today's Use Stats !-->
    <androidx.cardview.widget.CardView
        android:id= "@+id/cv_statistics_today"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        app:cardElevation="2dp"
        android:background="@android:color/transparent"
        android:layout_marginHorizontal="10dp"
        >

        <LinearLayout
            android:id ="@+id/ll_statistics_today"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding = "10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text= "@string/today_use_stat"
                android:textStyle="bold"
                android:textSize= "15dp"
                />

            <LinearLayout
                android:id = "@+id/ll_use_time"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin = "10dp"
                >

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/today_use_time_tab"
                    android:textSize= "20dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id ="@+id/tv_use_time"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/time_expression2"
                    android:textSize= "25dp"
                    android:textStyle="bold"
                    android:layout_marginTop = "10dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id ="@+id/tv_cmp_use_time"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/cmp_total_time_before"
                    android:textSize= "15dp"
                    android:layout_marginTop= "5dp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:id = "@+id/ll_use_count"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin ="10dp"
                >

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/use_count_tab"
                    android:textSize= "20dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id ="@+id/tv_use_count"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/time_expression1"
                    android:textSize= "25dp"
                    android:textStyle="bold"
                    android:layout_marginTop = "10dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id = "@+id/tv_compare_use_cnt"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/cmp_total_count_before"
                    android:textSize= "15dp"
                    android:layout_marginTop= "5dp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:id = "@+id/ll_endured_time"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin ="10dp"
                >

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/endure_time_title"
                    android:textSize= "20dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id ="@+id/tv_endured_time"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/time_expression2"
                    android:textSize= "25dp"
                    android:textStyle="bold"
                    android:layout_marginTop = "10dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id = "@+id/tv_compare_endure"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/cmp_endure_time_before"
                    android:textSize= "15dp"
                    android:layout_marginTop= "5dp"
                    android:layout_gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:id = "@+id/ll_recent_time"
                android:layout_width = "match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin ="10dp"
                >

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/last_time_use"
                    android:textSize= "20dp"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id ="@+id/tv_recent_time"
                    android:layout_width = "wrap_content"
                    android:layout_height=  "match_parent"
                    android:text = "@string/time_expression1"
                    android:textSize= "25dp"
                    android:textStyle="bold"
                    android:layout_marginTop = "10dp"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!--Time Statistics !-->
    <androidx.cardview.widget.CardView
        android:id = "@+id/cv_statistics_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:cardCornerRadius="10dp"
        android:layout_marginTop= "10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="2dp"
        android:background="@android:color/transparent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_statistics_time"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_stat"
                android:textSize="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textStyle="bold" />
            <ImageButton
                android:id="@+id/btn_navigate_to_use_stat"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/navigate_next_15dp"
                android:contentDescription="@string/navigation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            android:layout_marginTop = "20dp"
            android:padding= "15dp"
            app:layout_constraintTop_toBottomOf="@id/ll_statistics_time"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity = "center_vertical"
            android:nestedScrollingEnabled="true"
            >
        <!-- Chart View!-->
        <androidx.fragment.app.FragmentContainerView
            android:id = "@+id/chart_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            />
        </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>